# webSocket

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  QUICK_START.md  README.md  docker-compose.dev.yml  docker-compose.yml  example_client.py  main.py  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md
tests/: __init__.py  test_connection_manager.py  test_notification_service.py  test_performance.py  test_server.py  test_server_startup.py  test_shutdown_handler.py  test_uvicorn_compatibility.py  test_websocket_integration.py
websocket_server/: __init__.py  app.py  dependencies.py
websocket_server/config/: __init__.py  logging.py  settings.py
websocket_server/endpoints/: __init__.py  http.py  websocket.py
websocket_server/handlers/: __init__.py  error_handler.py  multi_worker_shutdown.py  shutdown_handler.py
websocket_server/models/: __init__.py  message.py
websocket_server/services/: __init__.py  connection_manager.py  notification_service.py
